--- a/packages/scraper/tsconfig.json
+++ b/packages/scraper/tsconfig.json
@@ -1,8 +1,10 @@
 {
   "extends": "@acme/tsconfig/compiled-package.json",
   "compilerOptions": {
+    "outDir": "./dist",
     "rootDir": "./src",
-    "outDir": "./dist"
+    "types": ["node"],
+    "moduleResolution": "bundler"
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
