--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,14 @@ AUTH_SECRET='supersecret'
 # @see https://www.better-auth.com/docs/authentication/discord
 AUTH_DISCORD_ID=''
 AUTH_DISCORD_SECRET=''
+
+# AWS credentials for Textract OCR service
+# @see https://docs.aws.amazon.com/textract/
+# AWS_ACCESS_KEY_ID=''
+# AWS_SECRET_ACCESS_KEY=''
+# AWS_REGION='ap-southeast-2'
+AWS_PROFILE=''
+
+# OpenAI API key for embeddings generation (menu OCR vector search)
+# @see https://platform.openai.com/api-keys
+OPENAI_API_KEY=''
