--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -15,13 +15,17 @@
     "dev": "tsc",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint --flag unstable_native_nodejs_ts_config",
+    "test:menu-ocr": "tsx src/test-menu-ocr.ts",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false"
   },
   "dependencies": {
     "@acme/auth": "workspace:*",
     "@acme/db": "workspace:*",
     "@acme/validators": "workspace:*",
+    "@aws-sdk/client-textract": "^3.958.0",
+    "@t3-oss/env-core": "^0.13.8",
     "@trpc/server": "catalog:",
+    "openai": "^6.15.0",
     "superjson": "2.2.3",
     "zod": "catalog:"
   },
@@ -29,8 +33,10 @@
     "@acme/eslint-config": "workspace:*",
     "@acme/prettier-config": "workspace:*",
     "@acme/tsconfig": "workspace:*",
+    "@trpc/client": "catalog:",
     "eslint": "catalog:",
     "prettier": "catalog:",
+    "tsx": "catalog:",
     "typescript": "catalog:"
   },
   "prettier": "@acme/prettier-config"
