--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -14,6 +14,7 @@
     "clean": "git clean -xdf .cache .turbo dist node_modules",
     "dev": "tsc",
     "format": "prettier --check . --ignore-path ../../.gitignore",
+    "generate-embeddings": "pnpm with-env tsx src/scripts/generate-embeddings.ts",
     "lint": "eslint --flag unstable_native_nodejs_ts_config",
     "scrape": "pnpm with-env tsx src/scripts/scrape.ts",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
@@ -24,6 +25,7 @@
     "cheerio": "^1.0.0",
     "cli-progress": "^3.12.0",
     "drizzle-orm": "^0.44.7",
+    "openai": "^6.15.0",
     "zod": "catalog:"
   },
   "devDependencies": {
@@ -34,7 +36,7 @@
     "@types/node": "^22.10.2",
     "eslint": "catalog:",
     "prettier": "catalog:",
-    "tsx": "^4.19.2",
+    "tsx": "catalog:",
     "typescript": "catalog:"
   },
   "prettier": "@acme/prettier-config"
