--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -20,9 +20,10 @@ catalog:
   eslint: ^9.38.0
   prettier: ^3.6.2
   tailwindcss: ^4.1.16
+  tsx: ^4.20.6
   typescript: ^5.9.3
-  zod: ^4.1.12
   vite: 7.1.12
+  zod: ^4.1.12
 
 catalogs:
   react19:
