--- a/packages/scraper/package.json
+++ b/packages/scraper/package.json
@@ -17,6 +17,7 @@
     "generate-embeddings": "pnpm with-env tsx src/scripts/generate-embeddings.ts",
     "lint": "eslint --flag unstable_native_nodejs_ts_config",
     "scrape": "pnpm with-env tsx src/scripts/scrape.ts",
+    "test-db": "pnpm with-env tsx src/scripts/test-db-connection.ts",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
     "with-env": "dotenv -e ../../.env --"
   },
